objects/redwing__vILT_Account_Member__c.object
<CustomObject>
    <fields>
        <fullName>redwing__External_User__c</fullName>
        <label>External User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>vILT_Account_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__vILT_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>vILT Account</label>
        <referenceTo>redwing__vILT_Account__c</referenceTo>
        <relationshipLabel>vILT Account Members</relationshipLabel>
        <relationshipName>vILT_Account_Members</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>vILT Account Member</label>
    <listViews>
        <fullName>redwing__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>vILT Account Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>vILT Account Members</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>